Finished testValidate().